backends/candle/tests/snapshots/test_bert__mini_batch_pooled.snap
---
source: backends/candle/tests/test_bert.rs
expression: pooled_embeddings_batch
---
- - -0.023653807
  - -0.5267643
  - 0.1787919
  - -0.14631023
  - -0.0012309253
  - 0.105242714
  - -0.122629784
  - 0.020288635
  - -0.27227104
  - -0.34148085
  - -0.4129299
  - 0.086731695
  - -0.4004647
  - -0.21976271
  - -0.54023814
  - -0.10144243
  - -0.21477684
  - 0.5226392
  - -0.37936297
  - -0.036409866
  - 0.08668418
  - 0.108668245
  - -0.027627628
  - -0.19582719
  - -0.046201095
  - 0.08095224
  - 0.14048913
  - -0.4773944
  - 0.111762345
  - -0.6596104
  - 0.2113837
  - -0.27615792
  - -0.13641848
  - 0.09633248
  - -0.26763877
  - 0.36035874
  - -0.38997763
  - 0.00719025
  - 0.18046094
  - 0.11743744
  - -0.21450073
  - -0.032060083
  - 0.30788714
  - 0.15538688
  - 0.26266155
  - 0.120852455
  - 0.016424153
  - -0.40641606
  - 0.115033045
  - -0.029751226
  - -0.381675
  - -0.07059526
  - -0.19155875
  - 0.53704596
  - -0.060216323
  - -0.0677256
  - -0.05716763
  - 0.17114688
  - -0.235831
  - -0.10866304
  - 0.08157621
  - -0.5647195
  - -0.06860651
  - -0.11559559
  - -0.09653883
  - -0.019078087
  - 0.0025766199
  - 0.109995574
  - 0.10729995
  - -0.09817159
  - 0.5634802
  - 0.4147159
  - -0.12142056
  - -0.19750834
  - 0.16299886
  - -0.030180767
  - 0.20278214
  - 0.102122016
  - 0.6028226
  - -0.108202666
  - 0.20531115
  - 0.32432184
  - 0.0839707
  - -0.12163334
  - 0.4504348
  - -0.39893156
  - -0.29151234
  - -0.16034167
  - -0.20616741
  - -0.30862913
  - -0.23093455
  - -0.0021885638
  - -0.12116353
  - -0.1735691
  - -0.3809381
  - 0.020406542
  - 0.22117876
  - -0.51746047
  - -0.28055218
  - 5.5523973
  - -0.3564111
  - -0.011723161
  - 0.16576946
  - -0.18462704
  - 0.24236077
  - 0.37619546
  - -0.0019026194
  - -0.13669029
  - 0.3803328
  - -0.3413133
  - -0.036126815
  - 0.16732574
  - 0.16285917
  - 0.19078477
  - 0.31702375
  - -0.22917919
  - -0.09996897
  - -0.11953228
  - 0.16938774
  - 0.3088515
  - -0.6723834
  - -0.26018527
  - -0.28622165
  - -0.0498226
  - -0.4262323
  - -1.1589855
  - -0.1933029
  - -0.000000000000000000000000000000049437166
  - 0.3055481
  - -0.10545957
  - -0.17223772
  - 0.14438559
  - 0.11276114
  - -0.22509058
  - 0.009600243
  - -0.12691651
  - -0.35549337
  - -0.04640263
  - -0.28541023
  - -0.20964672
  - -0.19386213
  - 0.5982057
  - -0.005713761
  - 0.1658701
  - 0.0855035
  - -0.08043342
  - 0.029300835
  - -0.4346234
  - 0.08669731
  - -0.0038930438
  - -0.20084746
  - 0.023781367
  - -0.029085184
  - -0.06730154
  - 0.052111767
  - -0.056000862
  - 0.08206928
  - -0.27163842
  - -0.2869814
  - -0.14848171
  - 0.24304192
  - -0.1618666
  - 0.14447135
  - -0.1186801
  - -0.1890681
  - 0.3536837
  - 0.20451765
  - -0.07352124
  - 0.29962
  - 0.10955239
  - -0.09369596
  - -0.43238357
  - 0.029470801
  - -0.012709845
  - 0.5363715
  - -0.32215708
  - -0.092856035
  - -0.0025499463
  - 0.0548979
  - -0.08384357
  - -0.008276708
  - -0.41329274
  - -0.012799468
  - -0.110313416
  - 0.22510187
  - 0.41782004
  - 0.32100505
  - 0.27524808
  - 0.14740646
  - -0.050505176
  - -0.104008436
  - 0.33376163
  - -0.04426764
  - -0.03096896
  - 0.47012442
  - 0.2465635
  - 0.53519523
  - -0.049157366
  - -0.1796108
  - 0.1276557
  - -0.24247868
  - -0.37255004
  - 0.1880652
  - -0.20185196
  - 0.080629274
  - -0.11281632
  - -0.14334671
  - 0.36518425
  - 0.10675427
  - 0.28610533
  - 0.12599012
  - -0.01485578
  - -0.09792759
  - 0.42363814
  - -0.11939522
  - -0.17800774
  - 0.10417417
  - 0.18547216
  - -0.034531806
  - 0.21523368
  - 0.05815983
  - 0.027655834
  - -0.1061837
  - 0.000000000000000000000000000000044021652
  - -0.009982239
  - 0.21084474
  - -0.46962103
  - -0.05777538
  - 0.028581347
  - 0.025201231
  - -0.15010934
  - -0.016349982
  - -0.2101885
  - 0.034148708
  - 0.37485403
  - -0.11444263
  - -0.10079008
  - -0.11115399
  - 0.08012301
  - -0.2517176
  - -0.11848225
  - -0.10415933
  - -0.09254445
  - -0.20793395
  - 0.30255213
  - 0.041006733
  - -0.099986166
  - -0.03825561
  - 0.17252867
  - 0.11361313
  - -0.015649587
  - 0.26930824
  - -0.050051585
  - 0.3898327
  - -0.12829623
  - -0.22770691
  - -0.23308322
  - 0.22531728
  - -0.05944182
  - 0.21788532
  - 0.05497572
  - -0.28623912
  - -0.09237161
  - -0.009173036
  - 0.24530788
  - 0.23550217
  - -0.23356059
  - -0.08299857
  - -0.05429014
  - -0.10816423
  - 0.05233185
  - -0.013568243
  - 0.25640795
  - -0.098346
  - -0.12791106
  - 0.04103955
  - -0.030744374
  - 0.00436591
  - -0.295679
  - 0.029279133
  - -0.19114304
  - 0.14988847
  - 0.19868645
  - 0.33842227
  - -0.29369712
  - -0.4918172
  - -0.19141258
  - -0.35243154
  - -0.3355207
  - 0.50408083
  - -0.22728834
  - 0.46909648
  - 0.015434088
  - -0.07471244
  - -0.11504078
  - 0.28490543
  - -0.06827267
  - 0.35431454
  - -0.31561482
  - -0.3079984
  - -0.1128283
  - -0.20947763
  - -0.11498891
  - -0.014504917
  - 0.36151147
  - -0.34822693
  - 0.008035471
  - 0.42953235
  - 0.2616905
  - 0.33646876
  - -0.05260104
  - 0.3023778
  - -0.20922178
  - -0.07744066
  - -0.24780753
  - 0.30349088
  - -0.10036535
  - -0.1918456
  - -0.16460365
  - -0.00000008953824
  - -0.49246567
  - 0.574938
  - 0.29063582
  - -0.066491455
  - 0.366952
  - 0.17870608
  - 0.105398245
  - 0.5582349
  - -0.02022596
  - 0.0840654
  - 0.19786707
  - -0.23720957
  - -0.2458996
  - -0.22337228
  - -0.04727277
  - 0.14289585
  - -0.13182342
  - -0.068675935
  - 0.3057639
  - 0.0058843885
  - 0.57702196
  - 0.37619033
  - 0.1994732
  - -0.065715834
  - -0.013788788
  - -0.46072182
  - 0.13837937
  - -0.49979717
  - -0.059518576
  - -0.07456832
  - -0.017617209
  - 0.005376087
  - 0.12400706
  - -0.059223726
  - 0.08751151
  - 0.27314
  - -0.026147079
  - 0.15905702
  - -0.12986103
  - 0.07554807
  - -0.37380502
  - 0.29834184
  - 0.18286908
  - -0.1852028
  - -0.25390196
  - 0.066915475
  - 0.22108264
  - -0.16746238
  - 0.12273117
  - -0.02061049
  - 0.2057795
  - 0.058311284
  - 0.46559915
  - 0.6630525
  - 0.38511404
  - -0.09266757
  - 0.10028385
  - -0.30912873
  - -0.35274762
  - 0.4402579
  - 0.19845995
  - 0.13335083
  - -0.58064204
  - 0.059797622
- - -0.21648152
  - -0.43589735
  - 0.2482314
  - -0.14514744
  - 0.039021775
  - 0.10838051
  - -0.09471192
  - 0.0789381
  - -0.28652412
  - -0.23151326
  - -0.32888708
  - 0.14213619
  - -0.399336
  - -0.025261909
  - -0.6164433
  - -0.05186994
  - -0.29501298
  - 0.35687885
  - -0.23405463
  - -0.024670687
  - -0.03927105
  - 0.2959654
  - 0.05173536
  - -0.27186462
  - -0.09739261
  - 0.21934
  - 0.0789896
  - -0.42498446
  - 0.099647015
  - -0.6966706
  - 0.036624223
  - -0.13902767
  - -0.18618517
  - 0.20096825
  - -0.25275725
  - 0.25003165
  - -0.22685057
  - -0.054948166
  - 0.15830056
  - 0.024568895
  - -0.038029894
  - 0.07886176
  - 0.13236693
  - 0.045740306
  - 0.39128548
  - 0.2464545
  - 0.04251984
  - -0.24310564
  - 0.11721958
  - -0.10138649
  - -0.28677154
  - -0.054590095
  - -0.00540668
  - 0.35769963
  - -0.08020617
  - 0.06301099
  - -0.022342335
  - 0.052028827
  - -0.22086999
  - 0.05689023
  - 0.038958747
  - -0.26935297
  - -0.051020592
  - -0.054506075
  - -0.22792785
  - 0.12052064
  - 0.01951224
  - 0.1452452
  - 0.118311934
  - -0.12818073
  - 0.5389539
  - 0.44192922
  - -0.20392811
  - -0.03015853
  - 0.21292128
  - 0.07035466
  - 0.20837635
  - 0.034582324
  - 0.6042855
  - -0.0137454625
  - 0.022363335
  - 0.13064303
  - 0.12341192
  - -0.120635144
  - 0.22798952
  - -0.38604605
  - -0.4372645
  - -0.03035793
  - -0.027872033
  - -0.15301672
  - -0.1256845
  - -0.057485387
  - 0.08755331
  - -0.21123695
  - -0.5152779
  - 0.005598405
  - 0.23600851
  - -0.48300347
  - -0.18985012
  - 5.6195865
  - -0.23570956
  - 0.06231802
  - 0.19457674
  - -0.0315715
  - 0.37193498
  - 0.31574127
  - 0.17507179
  - -0.057290338
  - 0.29164243
  - -0.2755567
  - 0.05274443
  - -0.021066202
  - 0.18941614
  - 0.08284956
  - 0.3016387
  - -0.29661882
  - 0.008247843
  - -0.078743674
  - 0.28012317
  - 0.3051281
  - -0.31206208
  - -0.40706366
  - -0.3044107
  - 0.075249866
  - -0.2997394
  - -1.2546976
  - -0.3060084
  - -0.000000000000000000000000000000048441026
  - 0.31513312
  - -0.05029823
  - -0.13876808
  - 0.1432139
  - 0.23771058
  - -0.30331478
  - 0.11150848
  - -0.13636474
  - -0.49580228
  - -0.14609216
  - -0.20127797
  - -0.3108676
  - -0.22628702
  - 0.3434737
  - 0.018648526
  - -0.026352908
  - 0.11777726
  - 0.06681039
  - -0.0720616
  - -0.36198846
  - -0.18660049
  - 0.1802673
  - 0.05528871
  - 0.088754386
  - 0.18068269
  - -0.1401597
  - -0.058006782
  - -0.056973334
  - 0.04449711
  - -0.35163915
  - -0.18721709
  - -0.13844144
  - 0.20367892
  - -0.21043843
  - 0.039447986
  - -0.16459155
  - 0.012858298
  - 0.16629773
  - 0.05504609
  - -0.11094047
  - 0.2317095
  - 0.11556391
  - 0.013769265
  - -0.4598462
  - 0.02163897
  - 0.013827603
  - 0.4976756
  - -0.15663221
  - -0.101294324
  - -0.028929953
  - 0.11077015
  - 0.007449201
  - 0.08089833
  - -0.1469053
  - 0.020198654
  - 0.08592322
  - 0.31050837
  - 0.43993956
  - 0.32589388
  - 0.19314483
  - 0.017670956
  - -0.124349415
  - -0.170955
  - 0.4117555
  - -0.12350958
  - -0.094511464
  - 0.51029587
  - 0.14076138
  - 0.4142475
  - 0.0016507898
  - -0.26179016
  - 0.007584398
  - -0.17868795
  - -0.39512312
  - 0.09609762
  - -0.14326885
  - 0.044949636
  - -0.105127946
  - -0.21047848
  - 0.34067503
  - 0.2351284
  - 0.18768801
  - 0.03715597
  - 0.15681857
  - 0.06405568
  - 0.21018295
  - 0.02145065
  - -0.15654258
  - -0.07277888
  - 0.21071073
  - 0.11268045
  - 0.13584298
  - 0.039659448
  - -0.10430586
  - -0.03735245
  - 0.000000000000000000000000000000047318238
  - -0.037725404
  - -0.06629425
  - -0.31211755
  - 0.050127834
  - -0.10265975
  - 0.019418724
  - -0.02987133
  - 0.018575506
  - -0.22822265
  - 0.07968441
  - 0.18512097
  - 0.0059334394
  - -0.07721344
  - -0.17382587
  - 0.14409037
  - -0.17171998
  - 0.0067942645
  - -0.08919111
  - 0.089674726
  - -0.14915141
  - 0.3542975
  - -0.04357525
  - -0.004081104
  - 0.021132473
  - 0.15488753
  - 0.11668095
  - -0.19595572
  - 0.24772343
  - 0.07318328
  - 0.18446505
  - -0.18725556
  - -0.24200761
  - -0.15750742
  - 0.031079272
  - -0.13646017
  - -0.0048966557
  - -0.00029310212
  - -0.11978861
  - -0.09007579
  - 0.09645871
  - 0.29204994
  - 0.23287286
  - -0.3129666
  - -0.20956343
  - 0.04023888
  - -0.095580995
  - 0.15068415
  - 0.13350217
  - 0.15800878
  - 0.06780077
  - -0.22805898
  - 0.09630037
  - -0.25385964
  - -0.030086897
  - -0.25292683
  - 0.09713179
  - -0.1525414
  - -0.013355581
  - 0.18783763
  - 0.14851522
  - -0.17537344
  - -0.48023155
  - -0.12941942
  - -0.31958637
  - -0.41143855
  - 0.3034969
  - -0.11626737
  - 0.3492894
  - -0.17696439
  - -0.14551875
  - -0.14766233
  - -0.032843437
  - -0.025097415
  - 0.2682441
  - -0.23090287
  - -0.2957242
  - -0.18707824
  - -0.24643038
  - -0.14616795
  - -0.00669688
  - 0.32356513
  - -0.2978466
  - 0.019019417
  - 0.32171795
  - 0.39992204
  - 0.1982043
  - 0.07712448
  - 0.34810847
  - 0.059030615
  - -0.124953076
  - -0.26138887
  - 0.14352632
  - -0.15246253
  - -0.11903816
  - -0.23996596
  - -0.000000088779956
  - -0.41955835
  - 0.5666807
  - 0.33404666
  - -0.08621963
  - 0.18882707
  - 0.052782062
  - 0.13750717
  - 0.27369168
  - -0.046698842
  - 0.11830561
  - 0.30613327
  - -0.14548378
  - -0.4566276
  - -0.19372736
  - 0.052548006
  - 0.033041444
  - -0.07271551
  - -0.07576998
  - 0.17172942
  - -0.11695926
  - 0.45725378
  - 0.36336252
  - 0.1679408
  - -0.08422157
  - -0.011755748
  - -0.1665263
  - 0.12473547
  - -0.60069424
  - -0.00964435
  - -0.049222
  - -0.20507647
  - 0.023484685
  - 0.26002684
  - 0.14209032
  - 0.10125992
  - 0.2866551
  - 0.15008904
  - 0.1576768
  - -0.026342485
  - 0.10480256
  - -0.35659075
  - 0.19676086
  - -0.077547126
  - -0.16756251
  - -0.16538951
  - 0.030236779
  - 0.054367267
  - -0.024989717
  - 0.22491598
  - -0.025750015
  - 0.21984428
  - -0.030972298
  - 0.112946905
  - 0.43752247
  - 0.39904967
  - -0.17016563
  - 0.21665087
  - -0.325466
  - -0.09598455
  - 0.40704513
  - 0.24287646
  - 0.042676084
  - -0.34892696
  - -0.06189768
- - -0.023653807
  - -0.5267643
  - 0.1787919
  - -0.14631023
  - -0.0012309253
  - 0.105242714
  - -0.122629784
  - 0.020288635
  - -0.27227104
  - -0.34148085
  - -0.4129299
  - 0.086731695
  - -0.4004647
  - -0.21976271
  - -0.54023814
  - -0.10144243
  - -0.21477684
  - 0.5226392
  - -0.37936297
  - -0.036409866
  - 0.08668418
  - 0.108668245
  - -0.027627628
  - -0.19582719
  - -0.046201095
  - 0.08095224
  - 0.14048913
  - -0.4773944
  - 0.111762345
  - -0.6596104
  - 0.2113837
  - -0.27615792
  - -0.13641848
  - 0.09633248
  - -0.26763877
  - 0.36035874
  - -0.38997763
  - 0.00719025
  - 0.18046094
  - 0.11743744
  - -0.21450073
  - -0.032060083
  - 0.30788714
  - 0.15538688
  - 0.26266155
  - 0.120852455
  - 0.016424153
  - -0.40641606
  - 0.115033045
  - -0.029751226
  - -0.381675
  - -0.07059526
  - -0.19155875
  - 0.53704596
  - -0.060216323
  - -0.0677256
  - -0.05716763
  - 0.17114688
  - -0.235831
  - -0.10866304
  - 0.08157621
  - -0.5647195
  - -0.06860651
  - -0.11559559
  - -0.09653883
  - -0.019078087
  - 0.0025766199
  - 0.109995574
  - 0.10729995
  - -0.09817159
  - 0.5634802
  - 0.4147159
  - -0.12142056
  - -0.19750834
  - 0.16299886
  - -0.030180767
  - 0.20278214
  - 0.102122016
  - 0.6028226
  - -0.108202666
  - 0.20531115
  - 0.32432184
  - 0.0839707
  - -0.12163334
  - 0.4504348
  - -0.39893156
  - -0.29151234
  - -0.16034167
  - -0.20616741
  - -0.30862913
  - -0.23093455
  - -0.0021885638
  - -0.12116353
  - -0.1735691
  - -0.3809381
  - 0.020406542
  - 0.22117876
  - -0.51746047
  - -0.28055218
  - 5.5523973
  - -0.3564111
  - -0.011723161
  - 0.16576946
  - -0.18462704
  - 0.24236077
  - 0.37619546
  - -0.0019026194
  - -0.13669029
  - 0.3803328
  - -0.3413133
  - -0.036126815
  - 0.16732574
  - 0.16285917
  - 0.19078477
  - 0.31702375
  - -0.22917919
  - -0.09996897
  - -0.11953228
  - 0.16938774
  - 0.3088515
  - -0.6723834
  - -0.26018527
  - -0.28622165
  - -0.0498226
  - -0.4262323
  - -1.1589855
  - -0.1933029
  - -0.000000000000000000000000000000049437166
  - 0.3055481
  - -0.10545957
  - -0.17223772
  - 0.14438559
  - 0.11276114
  - -0.22509058
  - 0.009600243
  - -0.12691651
  - -0.35549337
  - -0.04640263
  - -0.28541023
  - -0.20964672
  - -0.19386213
  - 0.5982057
  - -0.005713761
  - 0.1658701
  - 0.0855035
  - -0.08043342
  - 0.029300835
  - -0.4346234
  - 0.08669731
  - -0.0038930438
  - -0.20084746
  - 0.023781367
  - -0.029085184
  - -0.06730154
  - 0.052111767
  - -0.056000862
  - 0.08206928
  - -0.27163842
  - -0.2869814
  - -0.14848171
  - 0.24304192
  - -0.1618666
  - 0.14447135
  - -0.1186801
  - -0.1890681
  - 0.3536837
  - 0.20451765
  - -0.07352124
  - 0.29962
  - 0.10955239
  - -0.09369596
  - -0.43238357
  - 0.029470801
  - -0.012709845
  - 0.5363715
  - -0.32215708
  - -0.092856035
  - -0.0025499463
  - 0.0548979
  - -0.08384357
  - -0.008276708
  - -0.41329274
  - -0.012799468
  - -0.110313416
  - 0.22510187
  - 0.41782004
  - 0.32100505
  - 0.27524808
  - 0.14740646
  - -0.050505176
  - -0.104008436
  - 0.33376163
  - -0.04426764
  - -0.03096896
  - 0.47012442
  - 0.2465635
  - 0.53519523
  - -0.049157366
  - -0.1796108
  - 0.1276557
  - -0.24247868
  - -0.37255004
  - 0.1880652
  - -0.20185196
  - 0.080629274
  - -0.11281632
  - -0.14334671
  - 0.36518425
  - 0.10675427
  - 0.28610533
  - 0.12599012
  - -0.01485578
  - -0.09792759
  - 0.42363814
  - -0.11939522
  - -0.17800774
  - 0.10417417
  - 0.18547216
  - -0.034531806
  - 0.21523368
  - 0.05815983
  - 0.027655834
  - -0.1061837
  - 0.000000000000000000000000000000044021652
  - -0.009982239
  - 0.21084474
  - -0.46962103
  - -0.05777538
  - 0.028581347
  - 0.025201231
  - -0.15010934
  - -0.016349982
  - -0.2101885
  - 0.034148708
  - 0.37485403
  - -0.11444263
  - -0.10079008
  - -0.11115399
  - 0.08012301
  - -0.2517176
  - -0.11848225
  - -0.10415933
  - -0.09254445
  - -0.20793395
  - 0.30255213
  - 0.041006733
  - -0.099986166
  - -0.03825561
  - 0.17252867
  - 0.11361313
  - -0.015649587
  - 0.26930824
  - -0.050051585
  - 0.3898327
  - -0.12829623
  - -0.22770691
  - -0.23308322
  - 0.22531728
  - -0.05944182
  - 0.21788532
  - 0.05497572
  - -0.28623912
  - -0.09237161
  - -0.009173036
  - 0.24530788
  - 0.23550217
  - -0.23356059
  - -0.08299857
  - -0.05429014
  - -0.10816423
  - 0.05233185
  - -0.013568243
  - 0.25640795
  - -0.098346
  - -0.12791106
  - 0.04103955
  - -0.030744374
  - 0.00436591
  - -0.295679
  - 0.029279133
  - -0.19114304
  - 0.14988847
  - 0.19868645
  - 0.33842227
  - -0.29369712
  - -0.4918172
  - -0.19141258
  - -0.35243154
  - -0.3355207
  - 0.50408083
  - -0.22728834
  - 0.46909648
  - 0.015434088
  - -0.07471244
  - -0.11504078
  - 0.28490543
  - -0.06827267
  - 0.35431454
  - -0.31561482
  - -0.3079984
  - -0.1128283
  - -0.20947763
  - -0.11498891
  - -0.014504917
  - 0.36151147
  - -0.34822693
  - 0.008035471
  - 0.42953235
  - 0.2616905
  - 0.33646876
  - -0.05260104
  - 0.3023778
  - -0.20922178
  - -0.07744066
  - -0.24780753
  - 0.30349088
  - -0.10036535
  - -0.1918456
  - -0.16460365
  - -0.00000008953824
  - -0.49246567
  - 0.574938
  - 0.29063582
  - -0.066491455
  - 0.366952
  - 0.17870608
  - 0.105398245
  - 0.5582349
  - -0.02022596
  - 0.0840654
  - 0.19786707
  - -0.23720957
  - -0.2458996
  - -0.22337228
  - -0.04727277
  - 0.14289585
  - -0.13182342
  - -0.068675935
  - 0.3057639
  - 0.0058843885
  - 0.57702196
  - 0.37619033
  - 0.1994732
  - -0.065715834
  - -0.013788788
  - -0.46072182
  - 0.13837937
  - -0.49979717
  - -0.059518576
  - -0.07456832
  - -0.017617209
  - 0.005376087
  - 0.12400706
  - -0.059223726
  - 0.08751151
  - 0.27314
  - -0.026147079
  - 0.15905702
  - -0.12986103
  - 0.07554807
  - -0.37380502
  - 0.29834184
  - 0.18286908
  - -0.1852028
  - -0.25390196
  - 0.066915475
  - 0.22108264
  - -0.16746238
  - 0.12273117
  - -0.02061049
  - 0.2057795
  - 0.058311284
  - 0.46559915
  - 0.6630525
  - 0.38511404
  - -0.09266757
  - 0.10028385
  - -0.30912873
  - -0.35274762
  - 0.4402579
  - 0.19845995
  - 0.13335083
  - -0.58064204
  - 0.059797622

