backends/candle/tests/snapshots/test_bert__mini_single.snap
---
source: backends/candle/tests/test_bert.rs
expression: embeddings_single
---
- - -0.5905822
  - -0.2525167
  - 0.14959584
  - 0.054548685
  - -0.11789139
  - -0.16702051
  - -0.2331886
  - -0.07111306
  - -0.19944426
  - -0.29595104
  - -0.7731143
  - 0.14407897
  - -0.29080537
  - -0.18528816
  - -0.90925914
  - -0.020204756
  - 0.028502962
  - 0.34817806
  - -1.0032953
  - -0.41697448
  - 0.1934247
  - 0.40048108
  - -0.3906826
  - -0.18889977
  - 0.4526494
  - 0.25689012
  - 0.17726377
  - -0.31426263
  - 0.1250183
  - -0.08393615
  - 0.6500511
  - -0.2302905
  - 0.18419918
  - 0.49622348
  - -0.36559528
  - 0.83769214
  - -0.551407
  - 0.103570856
  - 0.09400676
  - -0.21002762
  - -0.29478115
  - -0.18860105
  - -0.009910335
  - 0.18697806
  - 0.92610204
  - 0.33941612
  - -0.082030125
  - -0.6034355
  - 0.15340401
  - 0.21050398
  - -0.20921578
  - -0.13902524
  - -0.3827591
  - 0.63712025
  - 0.0040485496
  - 0.09897916
  - 0.2789379
  - -0.021972388
  - -0.53686434
  - 0.3202223
  - 0.48562184
  - -0.69386727
  - 0.024683978
  - 0.23594321
  - 0.29521427
  - -0.27045968
  - 0.048694637
  - 0.110244274
  - 0.53926224
  - -0.77139634
  - 0.4209654
  - 0.4750518
  - -0.052538875
  - 0.07966832
  - 0.14345014
  - -0.43797436
  - 0.21794893
  - 0.055310573
  - 0.7462658
  - -0.21850769
  - 0.7266181
  - 0.549555
  - -0.11633466
  - 0.368249
  - 1.0122206
  - -0.5168573
  - 0.11747182
  - 0.06994404
  - -0.6778618
  - -0.52381235
  - -0.2710965
  - -0.5250548
  - -0.5948887
  - -0.0012941743
  - -0.2924962
  - -0.095263354
  - -0.051451437
  - -0.9137996
  - -0.40414217
  - 0.3842635
  - -0.0225345
  - 0.062937684
  - 0.41753647
  - -0.047207624
  - -0.068914846
  - 0.090506375
  - 0.42675138
  - 0.109467186
  - 0.31070897
  - -0.62438476
  - -0.19247803
  - 0.2941215
  - 0.18347324
  - -0.18997712
  - 0.1642261
  - -0.19337931
  - -0.102235556
  - -0.041086674
  - -0.14846203
  - 0.6917226
  - -0.8732191
  - -0.060058128
  - -0.24552263
  - -0.12856898
  - -0.2914501
  - -0.1887479
  - -0.3668236
  - -0.000000000000000000000000000000029240537
  - -0.0039896094
  - -0.36697504
  - -0.45366925
  - 0.04975644
  - 0.31989673
  - -0.42694908
  - -0.20267479
  - 0.09384082
  - -0.42025587
  - 0.44595543
  - -0.14169464
  - 0.0813049
  - -0.138726
  - 1.1364049
  - 0.3478461
  - 0.09553712
  - -0.64425725
  - 0.5023483
  - 0.83466536
  - -0.5949079
  - -0.060975213
  - 0.31882063
  - -0.17581889
  - 0.022465851
  - -0.05469214
  - -0.10731493
  - 0.15609773
  - 0.16630125
  - 0.21610661
  - -0.028483214
  - -0.5626438
  - 0.07620309
  - -0.16477105
  - -0.069259115
  - 0.3652963
  - 0.042083118
  - 0.018148389
  - -0.062457535
  - 0.30002403
  - -0.26324186
  - 0.3456572
  - 0.062287714
  - -0.06215567
  - -0.43306065
  - -0.20688285
  - -0.1685666
  - 0.2078495
  - -0.71178585
  - -0.6564981
  - -0.38591677
  - -0.052962523
  - -0.3261991
  - -0.18351372
  - -0.4604339
  - 0.2930664
  - 0.277802
  - 0.21312878
  - 0.20633987
  - 0.12381153
  - 0.18202356
  - 0.53390193
  - 0.39961782
  - -0.46880856
  - 0.6647521
  - -0.09672223
  - 0.16156423
  - 0.6650926
  - 0.6806067
  - 1.0482094
  - -0.09435779
  - 0.029582651
  - 0.09683895
  - 0.203073
  - -0.5732891
  - -0.07686127
  - 0.08099214
  - 0.15478149
  - -0.26159474
  - -0.2566363
  - 0.78577054
  - -0.47089925
  - 0.30936465
  - -0.25532243
  - 0.0064516324
  - -0.53040725
  - 0.6080942
  - -0.24619754
  - -0.30199987
  - 0.26108736
  - 0.014690906
  - -0.70210713
  - -0.049562275
  - -0.14834751
  - -0.07956274
  - -0.16515985
  - 0.000000000000000000000000000000021861
  - -0.25157446
  - 0.43375129
  - -0.8755244
  - 0.7175831
  - 0.2902798
  - 0.0074201175
  - -0.62435234
  - 0.35527846
  - -0.552679
  - 0.18954086
  - 0.20335351
  - -0.035552207
  - 0.4529572
  - 0.10931892
  - 0.19148143
  - -0.16911459
  - -0.35587427
  - -0.3493578
  - -0.47012717
  - -0.26946193
  - 0.23536286
  - 0.58844364
  - -0.3380215
  - -0.24592063
  - -0.15954623
  - -0.22448906
  - -0.25596026
  - 0.12521902
  - -0.106268756
  - 0.28519255
  - 0.17178701
  - -0.3287186
  - -0.6783996
  - 0.4482324
  - 0.29271346
  - 0.50640035
  - 0.5931688
  - -0.28495908
  - -0.26254502
  - -0.4237756
  - 0.21733634
  - -0.009652589
  - 0.18802977
  - 0.254598
  - -0.31955296
  - -0.05901348
  - 0.0068638837
  - -0.044022094
  - 0.32722753
  - -0.19676164
  - 0.31067184
  - 0.027737487
  - 0.034569282
  - -0.3569302
  - -0.25845194
  - -0.07841165
  - -0.10891752
  - 0.18727538
  - 0.14427944
  - 0.43520635
  - -0.18098663
  - -0.4947866
  - -0.11612529
  - -0.18040998
  - -0.16923454
  - 0.8050995
  - -0.596841
  - 0.6288896
  - 0.03233897
  - 0.14519283
  - 0.80883557
  - 0.10845174
  - 0.34680286
  - 0.5812995
  - -0.5397416
  - -0.5434021
  - 0.057071857
  - -0.09486484
  - -0.33432207
  - -0.18326911
  - 0.39803055
  - -0.80921376
  - -0.10375113
  - 0.65296334
  - -0.09063423
  - 0.10393066
  - -0.24666296
  - 0.5133282
  - -0.35965517
  - -0.02616671
  - -0.24137843
  - 0.10464253
  - -0.6334521
  - 0.0021675143
  - -0.52741486
  - -0.00000009196107
  - -0.19908127
  - 0.088920064
  - 0.5567359
  - -0.8009427
  - 0.3083997
  - -0.18737307
  - 0.10197395
  - 0.82060134
  - 0.024411181
  - 0.07724148
  - 0.60279316
  - 0.01429141
  - -0.5294417
  - -0.15347035
  - 0.027200898
  - 0.6112227
  - 0.45954376
  - -0.0004197508
  - 0.41491097
  - 0.02481507
  - 0.8714842
  - 0.32075447
  - 0.120130405
  - -0.055921085
  - 0.22076562
  - -0.6300306
  - 0.36908314
  - 0.68083143
  - 0.10630507
  - -0.4252642
  - -0.20267203
  - 0.53380257
  - -0.12403769
  - -0.16542706
  - 0.019964132
  - 0.8855693
  - 0.30768922
  - -0.28937826
  - -0.05903546
  - -0.4054046
  - -0.4042628
  - 1.1373893
  - 0.27809668
  - -0.06820501
  - -0.4680714
  - 0.089684784
  - 0.31660247
  - -0.054611325
  - 0.14755571
  - 0.11694164
  - -0.16122253
  - 0.51518285
  - 0.6203127
  - 0.64230794
  - -0.036301676
  - 0.11894374
  - 0.017895553
  - -0.5259501
  - -0.16221896
  - 0.73642933
  - -0.079223275
  - 0.54166216
  - 0.28228587
  - 0.27675694

