backends/candle/tests/snapshots/test_bert__mini_single_pooled.snap
---
source: backends/candle/tests/test_bert.rs
assertion_line: 91
expression: embeddings_single
---
- - -0.023653807
  - -0.5267643
  - 0.1787919
  - -0.14631023
  - -0.0012309253
  - 0.105242714
  - -0.122629784
  - 0.020288635
  - -0.27227104
  - -0.34148085
  - -0.4129299
  - 0.086731695
  - -0.4004647
  - -0.21976271
  - -0.54023814
  - -0.10144243
  - -0.21477684
  - 0.5226392
  - -0.37936297
  - -0.036409866
  - 0.08668418
  - 0.108668245
  - -0.027627628
  - -0.19582719
  - -0.046201095
  - 0.08095224
  - 0.14048913
  - -0.4773944
  - 0.111762345
  - -0.6596104
  - 0.2113837
  - -0.27615792
  - -0.13641848
  - 0.09633248
  - -0.26763877
  - 0.36035874
  - -0.38997763
  - 0.00719025
  - 0.18046094
  - 0.11743744
  - -0.21450073
  - -0.032060083
  - 0.30788714
  - 0.15538688
  - 0.26266155
  - 0.120852455
  - 0.016424153
  - -0.40641606
  - 0.115033045
  - -0.029751226
  - -0.381675
  - -0.07059526
  - -0.19155875
  - 0.53704596
  - -0.060216323
  - -0.0677256
  - -0.05716763
  - 0.17114688
  - -0.235831
  - -0.10866304
  - 0.08157621
  - -0.5647195
  - -0.06860651
  - -0.11559559
  - -0.09653883
  - -0.019078087
  - 0.0025766199
  - 0.109995574
  - 0.10729995
  - -0.09817159
  - 0.5634802
  - 0.4147159
  - -0.12142056
  - -0.19750834
  - 0.16299886
  - -0.030180767
  - 0.20278214
  - 0.102122016
  - 0.6028226
  - -0.108202666
  - 0.20531115
  - 0.32432184
  - 0.0839707
  - -0.12163334
  - 0.4504348
  - -0.39893156
  - -0.29151234
  - -0.16034167
  - -0.20616741
  - -0.30862913
  - -0.23093455
  - -0.0021885638
  - -0.12116353
  - -0.1735691
  - -0.3809381
  - 0.020406542
  - 0.22117876
  - -0.51746047
  - -0.28055218
  - 5.5523973
  - -0.3564111
  - -0.011723161
  - 0.16576946
  - -0.18462704
  - 0.24236077
  - 0.37619546
  - -0.0019026194
  - -0.13669029
  - 0.3803328
  - -0.3413133
  - -0.036126815
  - 0.16732574
  - 0.16285917
  - 0.19078477
  - 0.31702375
  - -0.22917919
  - -0.09996897
  - -0.11953228
  - 0.16938774
  - 0.3088515
  - -0.6723834
  - -0.26018527
  - -0.28622165
  - -0.0498226
  - -0.4262323
  - -1.1589855
  - -0.1933029
  - -0.000000000000000000000000000000049437166
  - 0.3055481
  - -0.10545957
  - -0.17223772
  - 0.14438559
  - 0.11276114
  - -0.22509058
  - 0.009600243
  - -0.12691651
  - -0.35549337
  - -0.04640263
  - -0.28541023
  - -0.20964672
  - -0.19386213
  - 0.5982057
  - -0.005713761
  - 0.1658701
  - 0.0855035
  - -0.08043342
  - 0.029300835
  - -0.4346234
  - 0.08669731
  - -0.0038930438
  - -0.20084746
  - 0.023781367
  - -0.029085184
  - -0.06730154
  - 0.052111767
  - -0.056000862
  - 0.08206928
  - -0.27163842
  - -0.2869814
  - -0.14848171
  - 0.24304192
  - -0.1618666
  - 0.14447135
  - -0.1186801
  - -0.1890681
  - 0.3536837
  - 0.20451765
  - -0.07352124
  - 0.29962
  - 0.10955239
  - -0.09369596
  - -0.43238357
  - 0.029470801
  - -0.012709845
  - 0.5363715
  - -0.32215708
  - -0.092856035
  - -0.0025499463
  - 0.0548979
  - -0.08384357
  - -0.008276708
  - -0.41329274
  - -0.012799468
  - -0.110313416
  - 0.22510187
  - 0.41782004
  - 0.32100505
  - 0.27524808
  - 0.14740646
  - -0.050505176
  - -0.104008436
  - 0.33376163
  - -0.04426764
  - -0.03096896
  - 0.47012442
  - 0.2465635
  - 0.53519523
  - -0.049157366
  - -0.1796108
  - 0.1276557
  - -0.24247868
  - -0.37255004
  - 0.1880652
  - -0.20185196
  - 0.080629274
  - -0.11281632
  - -0.14334671
  - 0.36518425
  - 0.10675427
  - 0.28610533
  - 0.12599012
  - -0.01485578
  - -0.09792759
  - 0.42363814
  - -0.11939522
  - -0.17800774
  - 0.10417417
  - 0.18547216
  - -0.034531806
  - 0.21523368
  - 0.05815983
  - 0.027655834
  - -0.1061837
  - 0.000000000000000000000000000000044021652
  - -0.009982239
  - 0.21084474
  - -0.46962103
  - -0.05777538
  - 0.028581347
  - 0.025201231
  - -0.15010934
  - -0.016349982
  - -0.2101885
  - 0.034148708
  - 0.37485403
  - -0.11444263
  - -0.10079008
  - -0.11115399
  - 0.08012301
  - -0.2517176
  - -0.11848225
  - -0.10415933
  - -0.09254445
  - -0.20793395
  - 0.30255213
  - 0.041006733
  - -0.099986166
  - -0.03825561
  - 0.17252867
  - 0.11361313
  - -0.015649587
  - 0.26930824
  - -0.050051585
  - 0.3898327
  - -0.12829623
  - -0.22770691
  - -0.23308322
  - 0.22531728
  - -0.05944182
  - 0.21788532
  - 0.05497572
  - -0.28623912
  - -0.09237161
  - -0.009173036
  - 0.24530788
  - 0.23550217
  - -0.23356059
  - -0.08299857
  - -0.05429014
  - -0.10816423
  - 0.05233185
  - -0.013568243
  - 0.25640795
  - -0.098346
  - -0.12791106
  - 0.04103955
  - -0.030744374
  - 0.00436591
  - -0.295679
  - 0.029279133
  - -0.19114304
  - 0.14988847
  - 0.19868645
  - 0.33842227
  - -0.29369712
  - -0.4918172
  - -0.19141258
  - -0.35243154
  - -0.3355207
  - 0.50408083
  - -0.22728834
  - 0.46909648
  - 0.015434088
  - -0.07471244
  - -0.11504078
  - 0.28490543
  - -0.06827267
  - 0.35431454
  - -0.31561482
  - -0.3079984
  - -0.1128283
  - -0.20947763
  - -0.11498891
  - -0.014504917
  - 0.36151147
  - -0.34822693
  - 0.008035471
  - 0.42953235
  - 0.2616905
  - 0.33646876
  - -0.05260104
  - 0.3023778
  - -0.20922178
  - -0.07744066
  - -0.24780753
  - 0.30349088
  - -0.10036535
  - -0.1918456
  - -0.16460365
  - -0.00000008953824
  - -0.49246567
  - 0.574938
  - 0.29063582
  - -0.066491455
  - 0.366952
  - 0.17870608
  - 0.105398245
  - 0.5582349
  - -0.02022596
  - 0.0840654
  - 0.19786707
  - -0.23720957
  - -0.2458996
  - -0.22337228
  - -0.04727277
  - 0.14289585
  - -0.13182342
  - -0.068675935
  - 0.3057639
  - 0.0058843885
  - 0.57702196
  - 0.37619033
  - 0.1994732
  - -0.065715834
  - -0.013788788
  - -0.46072182
  - 0.13837937
  - -0.49979717
  - -0.059518576
  - -0.07456832
  - -0.017617209
  - 0.005376087
  - 0.12400706
  - -0.059223726
  - 0.08751151
  - 0.27314
  - -0.026147079
  - 0.15905702
  - -0.12986103
  - 0.07554807
  - -0.37380502
  - 0.29834184
  - 0.18286908
  - -0.1852028
  - -0.25390196
  - 0.066915475
  - 0.22108264
  - -0.16746238
  - 0.12273117
  - -0.02061049
  - 0.2057795
  - 0.058311284
  - 0.46559915
  - 0.6630525
  - 0.38511404
  - -0.09266757
  - 0.10028385
  - -0.30912873
  - -0.35274762
  - 0.4402579
  - 0.19845995
  - 0.13335083
  - -0.58064204
  - 0.059797622

